css overflow:scroll for leftbar and container, fixes overflow of container div

--- a/public/layout.css
+++ b/public/layout.css
@@ -32,6 +32,7 @@ body{
   top: 0px;
   width: 100%;
   height: 100%;
+  overflow: scroll;
 }
 .navbar {
 
@@ -63,6 +64,8 @@ h1 {
   position: relative;
   background-color: rgba(0, 0, 0, 0.5); 
   width: 16em;
+  max-height: 100%;
+  overflow: scroll;
 }
 
 .leftBar h3 {
